--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,39 @@
-<p>auth works!</p>
+<div class="row">
+  <div class="col-xs-12 col-md-6 offset-md-3">
+    <form #authFormRef="ngForm" (ngSubmit)="onAuthFormSubmit(authFormRef)">
+      <div class="form-group">
+        <label for="email">
+          Email
+        </label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          ngModel
+          required
+          class="form-control"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">
+          Password
+        </label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          ngModel
+          required
+          class="form-control"
+        />
+      </div>
+
+      <div class="form-group">
+        <button class="btn btn-secondary mr-3" type="submit" [disabled]="!authFromRef.valid"> {{ isLoginMode ? "Sign In" : "Register" }} </button>
+        <button class="btn btn-secondary mr-3" type="submit" (click)="onSwitchAuthMode()"> Switch to {{ isLoginMode ? "Register" : "Sign In" }} </button>
+      </div>
+
+
+    </form>
+</div>
