--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -30,10 +30,11 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-secondary mr-3" type="submit" [disabled]="!authFromRef.valid"> {{ isLoginMode ? "Sign In" : "Register" }} </button>
+        <button class="btn btn-secondary mr-3" type="submit" [disabled]="!authFormRef.valid"> {{ isLoginMode ? "Sign In" : "Register" }} </button>
         <button class="btn btn-secondary mr-3" type="submit" (click)="onSwitchAuthMode()"> Switch to {{ isLoginMode ? "Register" : "Sign In" }} </button>
       </div>
-
-
     </form>
+
+    <p class="alert alert-danger mt-3" *ngIf="errMsg.length"> {{ errMsg }} </p>
+  </div>
 </div>
