--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg mb-4">
-  <a id="brand" class="navbar-brand brand">BG Organizer</a>
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg mb-4">
+  <a id="brand" class="navbar-brand brand">Board Game Organizer</a>
 
   <!-- dropdown toggle  -->
   <button
@@ -20,32 +20,79 @@
     class="collapse navbar-collapse"
     id="navbarToggler"
     [class.collapse]="collapsed"
-    (window:resize)="collapsed=true"
+    (window:resize)="collapsed = true"
   >
     <ul class="navbar-nav mr-auto-mt-2 mt-lg-0">
       <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/gameshelf"
-        routerLinkActive="active"></a>
+        <a
+          class="nav-link"
+          routerLink="/gameshelf"
+          routerLinkActive="active"
+        ></a>
       </li>
       <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/wishlist"
-        routerLinkActive="active"></a>
+        <a
+          class="nav-link"
+          routerLink="/wishlist"
+          routerLinkActive="active"
+        ></a>
       </li>
       <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/bgglibrary"
-        routerLinkActive="active"></a>
+        <a
+          class="nav-link"
+          routerLink="/bgglibrary"
+          routerLinkActive="active"
+        ></a>
       </li>
       <li class="nav-item" *ngIf="!isAuthenticated">
-        <a class="nav-link" routerLink="/authpage"
-        routerLinkActive="active">Sign In</a>
+        <a class="nav-link" routerLink="/authpage" routerLinkActive="active"
+          >Sign In</a
+        >
       </li>
-      <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/authpage"
-        routerLinkActive="active">Sign Out</a>
+      <li
+        class="nav-item"
+        *ngIf="isAuthenticated"
+        (click)="this.authService.logOut()"
+      >
+        <a class="nav-link" routerLink="/authpage" routerLinkActive="active"
+          >Sign Out</a
+        >
+      </li>
+    </ul>
+
+    <!-- navbar dropdown area -->
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          style="cursor: pointer"
+          id="navbarDropdownMenuLink"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          [attr.aria-expanded]="show"
+          (click)="show = !show"
+        >
+          Settings
+        </a>
+        <div
+          class="dropdown-menu"
+          aria-labelledby="navbarDropdownMenuLink"
+          [class.show]="show"
+        >
+          <a
+            class="dropdown-item"
+            style="cursor: pointer"
+            (click)="onSaveData()"
+            >Save Data</a
+          >
+          <a
+            class="dropdown-item"
+            style="cursor: pointer"
+            (click)="onFetchData()"
+            >Fetch Data</a
+          >
+        </div>
       </li>
     </ul>
   </div>
-
-
-
 </nav>
